2008-07-01
	* Implemented program restart option in FLTK

2008-06-28
	* Updated to build FLTK version using MingW under Cygwin (see below).

2008-06-26
	* Added build support for MingW under Cygwin. This is simpler than installing 
	  Msys, simply install MingW to say c:\MinwG, then change your .bash_profile with: 
	  export PATH=/c/MinGW/bin:$PATH
	  Then re-run configure (under cygwin bash) and a non-cygwin console version will 
	  be produced which can run under cmd.exe, explorer.exe etc.
	
2008-06-20
	* Can now supply program arguments on FLTK version command line:
	  sbasici -r t5.bas foo -or- sbasici t5.bas foo -or ls | sbasic t5.bas

2008-06-06
	* Implemented the ability to declare a local variable and assign a
	  value to it on the same line, eg local foo = "foo"

2008-06-04
	* Fixed problem with trailing backslash in strings

2008-06-01
	* Add support for hash arrays (rainy day)

2008-05-26
	* Updated module building to use autotools
	* Fix regression with console build
	* Fix for expression if (foo.x)
	* UDS copy operations now always as by reference
	* Can now refer to UDS field within parenthesis
	* Updated FLTK online help
	* Fix support for composite expressions such as "ar.ch(0).foo"

2008-05-24
	* Updated SDL forms to work with guichan 0.8.1
	* Fixed problem with FLTK HelpWidget displaying large pages

2008-05-15
	* Update FLTK forms implementation to be like the SDL implementation
	* FLTK now correctly implements DELAY
	* Updated help.bas help plugin to include an index

2008-05-07
	* FLTK: allow applications to set the window geometry using:
	option predef grmode WxH

2008-04-26
	* Source code release for version 0.10.0

2008-03-31
	* Various fixes for FLTK build
	* Implemented outside file change check in FLTK build
	* Implemented file drop support in FLTK build
	* Not being able to save an sbx file is no longer a fatal error
	* runtime .bas files can now be read-only files.
	* break command updates global last error string

2008-03-15