@@ -1379,13 +1379,6 @@ void bc_loop(int isf)
         case kwIMAGE:
           cmd_image();
           break;
-        case kwLOGPRINT:
-          // move from the switch(code) block near 
-          // kwFILEREAD cdw-s 20/11/2004
-          // I think this was why the ebm platform was 
-          // giving a duplicate case label error
-          cmd_print(PV_LOG);
-          break;
         default:
           err_pcode_err(pcode);
         }
@@ -1462,6 +1455,9 @@ void bc_loop(int isf)
         break;
       case kwFILEREAD:
         cmd_fread();
+        break;
+      case kwLOGPRINT:
+        cmd_print(PV_LOG);
         break;
       case kwFILEPRINT:
         cmd_print(PV_FILE);
